# xxproject

./: .gitattributes  .gitignore  AGENTS.md  BACKUP_VERSION.json  PROJECT_MEMORY.md  README.md  README_XXPROJECT_BACKUP.md  SECRETS_REDACTED.md
00_总纲/: gexmonitorapi数据增强引入说明_v1.0.md  中性回路工程总纲_v2026.06.18-r1.md  中性回路工程总纲_v2026.06.19-r2.1.md  中性回路工程总纲_v2026.06.19-r2.2.md  中性回路工程总纲_v2026.06.19-r2.md  中性回路工程总纲_v2026.06.22-r3.0.md  中性回路总系统整合设计总纲_v0.3.md  中性回路总系统整合设计总纲_v0.4.md  中性回路总系统整合设计总纲_v0.5.md  中性回路整合思路方案参考稿_v0.1.md
05_GEX监控API_数据增强接口/: .env.example  .gitignore  README.md  pyproject.toml  readme.txt
05_GEX监控API_数据增强接口/deploy/: README.md  gexmonitorapi.env.example  gexmonitorapi.service  nginx-gexmonitorapi.conf  部署文档.md
05_GEX监控API_数据增强接口/docs/: README.md  info.sample.json  info接口语义文档.md  pytest.txt
05_GEX监控API_数据增强接口/src/gexmonitorapi/: __init__.py  __main__.py  app.py  cache.py  config.py  models.py  parsers.py  scraper.py
05_GEX监控API_数据增强接口/tests/: test_api.py  test_cache.py  test_parser.py
05_GEX监控API_数据增强接口/交付物快照/: README.md
05_GEX监控API_数据增强接口/因子文档/: 00_GEX监控API总览.md  01_gex_board_GEX总览.md  02_gamma_exposure_关键价位.md  03_volatility_权利金与波动率.md  04_flow_期权资金流.md  05_rank_历史分位.md
99_工程资产索引/: README.md  备份推送记录_2026-06-18.md  备份推送记录_2026-06-19-r2.1.md  备份推送记录_2026-06-19-r2.2.md  备份推送记录_2026-06-19.md  备份推送记录_2026-06-22-r3.0.md
demo/: HANDOFF.md  README.md
docs/: MACRO方向压力与冲击门最小增强实施规范_v1.1.md  信号后LLM复核层_Opus4.8意见文档_v1.0.md  信号后LLM独立理论视角_方法论与落地_v1.0.md  信号审计JSON推送与静态Web标准_v1.0.md  信号审计推送格式重设计_v1.2.md  信号层_r3.3.1_MACRO双轴最小增强_进度.md  信号层倾向性论增层优化思路参考.md  (+11 more)
(+250 files in other folders)
